// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with all props 1`] = `
<label
  form="a_form"
  htmlFor="a_field"
  style={
    Object {
      "color": undefined,
      "fontFamily": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
      "lineHeight": undefined,
    }
  }
>
  I am a label
</label>
`;

exports[`Label renders without props 1`] = `
<label
  form={undefined}
  htmlFor={undefined}
  style={
    Object {
      "color": undefined,
      "fontFamily": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
      "lineHeight": undefined,
    }
  }
/>
`;
